PyMaker/datas/object2/RawHTML/i2801/Python_DOC_referPages.project-euler-2-python-3.txt
<div class="post-text" itemprop="text">
<p>Why won't this work for me? I'm sure my code is correct:</p>
<pre><code>def fibonacci_even_sum(n):
  if n == 0:
return 0
  if n == 1:
return 0
  if n == 2:
return 2
  sum = 2
  fib0 = 0 
  fib1 = 1
  fib2 = 2

  iter = 0

  while(fib2 &lt;= n):
    if(iter == 3):
      sum = sum + fib2
  iter = 0
    fib0 = fib1
    fib1 = fib2
    fib2 = fib0 + fib1
    iter += 0

    return sum

for i in range(1000000):
  fibsum = fibonacci_even_sum(4000000)
print(fibsum)
</code></pre>
<p>I have checked over the code many times yet it still tells me there is a syntax error.</p>
<p>Problem reference: <a href="https://projecteuler.net/problem=2" rel="nofollow noreferrer">https://projecteuler.net/problem=2</a></p>
</div>
<div class="post-text" itemprop="text">
<p>The problem lies in the line:</p>
<pre><code>iter += 0
</code></pre>
<p>You seem to need to add 1 to iter instead of 0. Hope this helps!</p>
</div>
<div class="post-text" itemprop="text">
<p>So I run your code and got this:</p>
<pre><code>$ python3 euler2.py 
  File "euler2.py", line 19
    fib0 = fib1
    ^
IndentationError: unexpected indent
</code></pre>
<p>Accordingly to this link, <a href="http://cs.franklin.edu/~ansaria/traceback.html" rel="nofollow noreferrer">How to read a traceback</a>,</p>
<blockquote>
<p>The <em>last line</em> will show the actual problem that caused the crash:</p>
</blockquote>
<pre><code>IndentationError: unexpected indent
</code></pre>
<p>(<a href="https://docs.python.org/3/library/exceptions.html#IndentationError" rel="nofollow noreferrer">IndentationError</a> should be self explanatory).</p>
<p>Keep reading up the traceback you should have good hints where the error could be.</p>
<p>Then read this <a href="https://www.python.org/dev/peps/pep-0008/#indentation" rel="nofollow noreferrer">piece of PEP</a> about indentation rules. Basically use 4 spaces per indentation level and prefer spaces over tabs (and don't mix them).</p>
</div>
<span class="comment-copy">First, please give us the full error, not just the fact that it's a syntax error. Python tells you exactly which line the problem is on, and even points at the character; without that information, we can't debug it.</span>
<span class="comment-copy">Second, please give us the actual code you're running. This code is pretty obviously going to raise an <code>indentationError</code> on the <code>fib0 = fib1</code> error, so the <code>SyntaxError</code> you're asking about comes after that, we can't even debug it from the code you posted here, because we can't get that far.</span>
<span class="comment-copy">It seems that lines 21 to 26 need to be outdented by two spaces. Fixing this would fix the <code>SyntaxError</code>. Also (this is a minor suggestion), don't use built-in functions as variable names (<code>iter</code> and <code>sum</code> are both pre-defined by Python), as this means that the functions they are associated with will no longer be callable.</span>
<span class="comment-copy">@watwolves8855: Please don't edit a question to change the indentation when the problem is a SyntaxError that might actually be caused by that indentation, and especially don't fix some indentation errors while leaving others unchanged.</span>
<span class="comment-copy">this reading may be relevant: <a href="http://cs.franklin.edu/~ansaria/traceback.html" rel="nofollow noreferrer">cs.franklin.edu/~ansaria/traceback.html</a></span>
<span class="comment-copy">While <code>iter += 0</code> is silly, it's certainly not a <code>SyntaxError</code>.</span>
